; ModuleID = '/home/carl/AnghaBench/linux/fs/overlayfs/extr_inode.c_ovl_lookup_trap_inode.c'
source_filename = "/home/carl/AnghaBench/linux/fs/overlayfs/extr_inode.c_ovl_lookup_trap_inode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.super_block = type { i32 }
%struct.dentry = type { i32 }
%struct.inode = type { i32 }

@ovl_inode_test = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ovl_lookup_trap_inode(%struct.super_block* %0, %struct.dentry* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.super_block*, align 8
  %5 = alloca %struct.dentry*, align 8
  %6 = alloca %struct.inode*, align 8
  %7 = alloca %struct.inode*, align 8
  %8 = alloca i32, align 4
  store %struct.super_block* %0, %struct.super_block** %4, align 8
  store %struct.dentry* %1, %struct.dentry** %5, align 8
  %9 = load %struct.dentry*, %struct.dentry** %5, align 8
  %10 = call %struct.inode* @d_inode(%struct.dentry* %9)
  store %struct.inode* %10, %struct.inode** %6, align 8
  %11 = load %struct.super_block*, %struct.super_block** %4, align 8
  %12 = load %struct.inode*, %struct.inode** %6, align 8
  %13 = ptrtoint %struct.inode* %12 to i64
  %14 = load i32, i32* @ovl_inode_test, align 4
  %15 = load %struct.inode*, %struct.inode** %6, align 8
  %16 = call %struct.inode* @ilookup5(%struct.super_block* %11, i64 %13, i32 %14, %struct.inode* %15)
  store %struct.inode* %16, %struct.inode** %7, align 8
  %17 = load %struct.inode*, %struct.inode** %7, align 8
  %18 = icmp ne %struct.inode* %17, null
  br i1 %18, label %20, label %19

19:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %39

20:                                               ; preds = %2
  %21 = load %struct.inode*, %struct.inode** %7, align 8
  %22 = call i64 @IS_DEADDIR(%struct.inode* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %33

24:                                               ; preds = %20
  %25 = load %struct.inode*, %struct.inode** %7, align 8
  %26 = call i32 @ovl_inode_upper(%struct.inode* %25)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %33, label %28

28:                                               ; preds = %24
  %29 = load %struct.inode*, %struct.inode** %7, align 8
  %30 = call i32 @ovl_inode_lower(%struct.inode* %29)
  %31 = icmp ne i32 %30, 0
  %32 = xor i1 %31, true
  br label %33

33:                                               ; preds = %28, %24, %20
  %34 = phi i1 [ false, %24 ], [ false, %20 ], [ %32, %28 ]
  %35 = zext i1 %34 to i32
  store i32 %35, i32* %8, align 4
  %36 = load %struct.inode*, %struct.inode** %7, align 8
  %37 = call i32 @iput(%struct.inode* %36)
  %38 = load i32, i32* %8, align 4
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %33, %19
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local %struct.inode* @d_inode(%struct.dentry*) #1

declare dso_local %struct.inode* @ilookup5(%struct.super_block*, i64, i32, %struct.inode*) #1

declare dso_local i64 @IS_DEADDIR(%struct.inode*) #1

declare dso_local i32 @ovl_inode_upper(%struct.inode*) #1

declare dso_local i32 @ovl_inode_lower(%struct.inode*) #1

declare dso_local i32 @iput(%struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
